# shipment-monitor

./: .env.template  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  manage.py  openAPIspec.json  pyproject.toml  requirements.txt
core/services/: shipment.py
core/services/weather/: __init__.py  common.py
core/services/weather/providers/: __init__.py  _open_weather_map.py  _weather_bit.py
parcelLab/: asgi.py  settings.py  settings_test.py  urls.py  wsgi.py
shipments/: models.py  seed_data.csv  urls.py  views.py
shipments/management/commands/: seed.py
shipments/migrations/: 0001_initial.py
tests/integration/: test_views.py
tests/unit/: test_weather_provider.py
